--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
     <p class="font-2 nomes"data-anime="400">Gabriel e Valéria </p>
    <a href="./video/gabrielevaleria.mp4" class="link_envelope" data-anime="600"> <img src="img/envelope.png" class="envelope"> </a>
   </div>
+  <div class="data"  data-anime="800">
+    <p class="font-1-g"><span class="mes"  data-anime="700">Maio</span><span class="font-2-m dia">17</span><span class="ano">2024</span></p>
+  </div>
   <div class="links font-1-p container">
     <div class="local flex"data-anime="800" >
       <a href="https://maps.app.goo.gl/EH1JJPLFuXF3ovfz5" target="_blank"><img src="img/local.png">
