--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
 <body>
   <div class="home">
     <p class="font-1-m casamento" data-anime="200">CASAMENTO DE</p>
-    <p class="font-2 nomes"data-anime="400">Gabriel e Valéria </p>
-   <a href="./video/gabrielevaleria.mp4" class="link_envelope" data-anime="600"> <img src="img/envelope.png" class="envelope"> </a>
+    <p class="font-2 nomes" data-anime="400">Gabriel e Valéria </p>
+    <a href="./video/gabrielevaleria.mp4" class="link_envelope" data-anime="600"> <img src="img/envelope.png" class="envelope"> </a>
   </div>
-  <div class="data"  data-anime="800">
-    <p class="font-1-g"><span class="mes"  data-anime="700">Maio</span><span class="font-2-m dia">17</span><span class="ano">2024</span></p>
+  <div class="data" data-anime="800">
+    <img src="./img/data.png">
   </div>
   <div class="links font-1-p container">
-    <div class="local flex"data-anime="800" >
+    <div class="local flex" data-anime="800">
       <a href="https://maps.app.goo.gl/EH1JJPLFuXF3ovfz5" target="_blank"><img src="img/local.png">
         <p>como<br>chegar</p>
       </a>
@@ -37,17 +37,17 @@
       </a>
     </div>
     <div class="lista flex" data-anime="1400">
-      <button  id="openModalBtn" class="font-1-p">
+      <button id="openModalBtn" class="font-1-p">
         <img src="img/pix.png">
         <p class="copy-button font-1-p">pix <br>presente</p>
       </button>
       <div id="myModal" class="modal">
         <div class="modal-content">
           <span class="close">&times;</span>
-          <h2 class="font-1-m">CHAVES PIX  (clique pra copiar):</h2>
-      
-          <p class="pix copy-button" >Valéria Lacerda de Carvalho:<span > 77988670084</span></p>
-          <p class="pix copy-button2" >Gabriel Oliveira Araujo:<span > 77981348438</span></p>
+          <h2 class="font-1-m">CHAVES PIX (clique pra copiar):</h2>
+
+          <p class="pix copy-button">Valéria Lacerda de Carvalho:<span> 77988670084</span></p>
+          <p class="pix copy-button2">Gabriel Oliveira Araujo:<span> 77981348438</span></p>
           <p id="copy-message" class="hidden font-1-p">Chave Pix copiada(email)!</p>
         </div>
       </div>
@@ -58,7 +58,7 @@
 
   <script src="simple-anime.js">
   </script>
-    <script src="parametros.js">
+  <script src="parametros.js">
   </script>
 </body>
 
